@@ -4,7 +4,7 @@ libadplug_la_SOURCES = adplug.cpp emuopl.cpp fmopl.c diskopl.cpp \
 a2m.cpp amd.cpp bam.cpp d00.cpp dfm.cpp hsc.cpp hsp.cpp imf.cpp ksm.cpp \
 lds.cpp mid.cpp mkj.cpp mtk.cpp protrack.cpp rad.cpp raw.cpp s3m.cpp sa2.cpp \
 sng.cpp u6m.cpp fmc.cpp mad.cpp xad.cpp bmf.cpp flash.cpp hyp.cpp psi.cpp \
-rat.cpp hybrid.cpp rol.cpp debug.c debug.h mididata.h imfcrc.h
+rat.cpp hybrid.cpp rol.cpp debug.c debug.h mididata.h imfcrc.h adtrack.cpp
 
 libadplug_la_LDFLAGS = -version-info 1:2
 
@@ -15,7 +15,7 @@ AM_CXXFLAGS = -Wall
 pkginclude_HEADERS = adplug.h emuopl.h fmopl.h silentopl.h opl.h diskopl.h \
 a2m.h amd.h bam.h d00.h dfm.h hsc.h hsp.h imf.h ksm.h lds.h mid.h mkj.h \
 mtk.h protrack.h rad.h raw.h s3m.h sa2.h sng.h u6m.h player.h fmc.h mad.h \
-xad.h bmf.h flash.h hyp.h psi.h rat.h hybrid.h rol.h
+xad.h bmf.h flash.h hyp.h psi.h rat.h hybrid.h rol.h adtrack.h
 
 EXTRA_DIST = Makefile.bt adplug.dsp analopl.cpp analopl.h realopl.cpp \
 realopl.h vc6inst.bat
