@@ -58,6 +58,7 @@
 #include "rat.h"
 #include "hybrid.h"
 #include "mad.h"
+#include "adtrack.h"
 
 // These players use C++ templates, which aren't supported by WATCOM C++
 #ifndef __WATCOMC__
@@ -66,9 +67,11 @@
 #endif
 
 /***** Defines *****/
+
 #define VERSION		"1.3"		// AdPlug library version string
 
 /***** Static variables initializers *****/
+
 const unsigned short CPlayer::note_table[12] = {363,385,408,432,458,485,514,544,577,611,647,686};
 const unsigned char CPlayer::op_table[9] = {0x00, 0x01, 0x02, 0x08, 0x09, 0x0a, 0x10, 0x11, 0x12};
 
@@ -87,7 +90,7 @@ static const struct Players {
   {CxadflashPlayer::factory}, {CxadhypPlayer::factory}, {CxadpsiPlayer::factory},
   {CxadratPlayer::factory}, {CxadhybridPlayer::factory}, {CfmcLoader::factory},
   {CmadLoader::factory}, {Cu6mPlayer::factory}, {Cd00Player::factory}, {ChspLoader::factory},
-  {ChscPlayer::factory}, {CimfPlayer::factory}, {CldsLoader::factory},
+  {ChscPlayer::factory}, {CimfPlayer::factory}, {CldsLoader::factory}, {CadtrackLoader::factory},
   {0}
 };
 
