@@ -2,6 +2,9 @@ This is a brief overview of user-visible changes in AdPlug.
 
 Changes for version 1.3:
 	- Completely new build system for DOS and Windows.
+	- Centralized debug management.
+	- Added a whole bunch of new developer documentation.
+	- Much more flexible Protracker player.
 	- New format support:
 		- SNG: Adlib Tracker 1.0
 
